--- a/menu.html
+++ b/menu.html
@@ -6,19 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/common.css">
     <script src="./js/bootstrap.min.js"></script>
   </script>
     <style>
-      .navbar {
-        margin-bottom: 0;
-        border-radius: 0;
-      }
-  
-      body {
-        text-align: center;
-        background-image: url("images/background.png");
-        background-repeat:repeat;
-      }
       #header{
         margin: 20px 0 0 0;
         color: white;
