--- a/menu.html
+++ b/menu.html
@@ -92,7 +92,7 @@
         const person = document.createElement('td')
         person.innerText = row.person
 
-        tr.append(th, td)
+        tr.append(food, person)
         
         document.getElementById('table-body').append(tr)
     });
